fix alignment in the file details

--- a/server/sonar-web/src/main/less/components/measures.less
+++ b/server/sonar-web/src/main/less/components/measures.less
@@ -137,5 +137,7 @@
 
   .measure-bar {
     width: 30%;
+    padding: 7px 5px;
+    .box-sizing(border-box);
   }
 }
